<resources>
    <string name="app_name">WittyLife</string>
    <string name="search_title">Search for your destination</string>
    <string name="search_hint">Search destination e.g Sydney</string>
    <string name="goal">Select your ranking criteria</string>
    <string name="popular_dest_text">Destinations with high quality of life</string>

    <string name="qol_message">Quality of life</string>
    <string name="cost_message">Cost of living</string>
    <string name="traffic_message">Traffic Ranking</string>


    <string name="error_message">An error has occurred. Please try again.</string>
    <string name="costofliving">costofliving</string>
    <string name="traffic">traffic</string>
    <string name="qolranking">qolranking</string>
    <string name="destination_item_description">Destination item</string>
    <string name="error_dismiss_button">Dismiss</string>
    <string name="network_error">w00t, something not right</string>
    <string name="network_error_msg">Please check network connection and try again</string>
    <string name="qol_header">Quality of life Index</string>
    <string name="purchasing_power_text">Purchasing Power Index</string>
    <string name="safety_text">Safety Index</string>
    <string name="health_text">Health Care Index</string>
    <string name="climate_text">Climate Index</string>
    <string name="share_ranking">Share destination ranking</string>

    <string name="action_compare">Compare ranking data</string>
    <string name="max_contrib_text">Maximum contributors for an underlying section:</string>
    <string name="min_contrib_text">Minimum contributors for an underlying section:</string>
    <string name="action_share">Share ranking</string>
    <string name="filter_ranking">Select ranking..</string>
    <string name="rank">Rank</string>
    <string name="ranking_city">City</string>
    <string name="ranking_qolindex">QOL index</string>
    <string name="PP_Index">PP Index</string>
    <string name="compare_title">Compare ranking</string>
    <string name="compare_with_city">Compare with city</string>
    <string name="no_data_error">No data available</string>
    <string name="no_data_error_msg">We don\'t have sufficient comparison data for this city. Please
        select another city.
    </string>
    <string name="no_match_message">We tried but couldn\'t find a matching city, please search for
        another city
    </string>
    <string name="wittylife_widget">Wittylife Widget</string>
    <string name="empty_view_text">No ranking data found</string>
    <string name="real_selection">Real value selected in spinner</string>
    <string name="bar_chart_description">Climate Index</string>
    <string name="no_barchart_data_message">No climate data available for comparison</string>
    <string name="piechart_descripttion">Safety Rating</string>
    <string name="no_piechart_data_message">No safety data available for comparison</string>
    <string name="qol_image_tooltip">Photo by Larm Rmah on Unsplash</string>
    <string name="cost_image_tooltip">Photo by André François McKenzie on Unsplash</string>
    <string name="traffic_image_tooltip">Photo by Lauren Kay on Unsplash</string>
    <string name="qol_ranking_title">Top QOL Ranking..</string>
    <string name="groceries_index">Groceries Index</string>
    <string name="rent_index">Rent Index</string>
    <string name="cost_ranking_title">Top Cost Ranking..</string>
    <string name="co2_emission">Co2 Emission</string>
    <string name="inefficiency">Inefficiency</string>
    <string name="traffic_ranking_title">Top Traffic Ranking..</string>
    <string name="enter_city_name">Enter city name..</string>

</resources>
