<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.RankingActivity">

    <LinearLayout
        android:id="@+id/filter_layout" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="60dp"
                  android:orientation="horizontal"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent">

        <TextView android:id="@+id/ranking_filter"
                  style="@style/TextAppearance.AppCompat.Medium"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="20dp"
                  android:text="@string/filter_ranking"
                  tools:text="Filter"/>
        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            tools:ignore="UselessParent">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/rank_selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorAccent"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown"
            />
        </LinearLayout>


    </LinearLayout>

    <TableLayout
        android:id="@+id/ranking_table_layout"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/table_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_layout">

        <TableRow android:id="@+id/ranking_header"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="8dp"
                  android:background="@color/colorPrimary"
        >
            <TextView android:id="@+id/ranking_text"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="8dp"
                      android:layout_marginTop="5dp"
                      android:layout_marginBottom="5dp"

                      android:text="@string/rank"
                      android:textAlignment="viewStart"
                      android:textSize="16sp"
            />

            <TextView android:id="@+id/ranking_city"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="0dp"
                      android:layout_marginTop="5dp"
                      android:layout_marginBottom="5dp"                      android:textAlignment="center"
                      android:textSize="16sp"
                      android:text="@string/ranking_city"
            />

            <TextView android:id="@+id/ranking_index"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="12dp"
                      android:layout_marginTop="5dp"
                      android:layout_marginBottom="5dp"                      android:textAlignment="center"
                      android:textSize="16sp"
                      android:text="@string/ranking_qolindex"
            />

            <TextView android:id="@+id/pp_value"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="12dp"
                      android:layout_marginTop="5dp"
                      android:layout_marginBottom="5dp"                      android:textAlignment="center"
                      android:textSize="16sp"
                      android:text="@string/PP_Index"
            />


        </TableRow>

        <View
            android:id="@+id/detail_divider0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="#dadada"
            app:layout_constraintStart_toStartOf="parent"/>

        <TableRow android:id="@+id/safety_index_row" android:layout_width="match_parent"
                  android:layout_height="match_parent"

        >
            <TextView android:id="@+id/rank_text"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="8dp"
                      android:layout_marginTop="10dp"
                      android:text="@string/safety_text"
                      android:textAlignment="viewStart"
                      android:textSize="16sp"
            />

            <TextView android:id="@+id/city_value"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="12dp"
                      android:layout_marginStart="12dp"
                      android:layout_marginTop="10dp"
                      android:textAlignment="center"
                      android:textSize="16sp"
                      tools:text="120.00"
            />

            <TextView android:id="@+id/qolindex_value"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="12dp"
                      android:layout_marginTop="10dp"
                      android:textAlignment="center"
                      android:textSize="16sp"
                      tools:text="120.00"
            />

            <TextView android:id="@+id/ppindex_value"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="12dp"
                      android:layout_marginTop="10dp"
                      android:textAlignment="center"
                      android:textSize="16sp"
                      tools:text="120.00"
            />

        </TableRow>

        <View
            android:id="@+id/detail_divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="#dadada"
            app:layout_constraintStart_toStartOf="parent"/>

        <TableRow android:id="@+id/healthcare_index_row" android:layout_width="match_parent"
                  android:layout_height="match_parent"
                 >
            <TextView android:id="@+id/health_text"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="8dp"
                      android:layout_marginTop="10dp"
                      android:text="@string/health_text"
                      android:textAlignment="viewStart"
                      android:textSize="16sp"/>

            <TextView android:id="@+id/healthcare_value"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="12dp"
                      android:layout_marginStart="12dp"
                      android:layout_marginTop="10dp"
                      android:textAlignment="center"
                      android:textSize="16sp"
                      tools:text="120.00"/>


        </TableRow>

        <View
            android:id="@+id/detail_divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="#dadada"
            app:layout_constraintStart_toStartOf="parent"/>

        <TableRow android:id="@+id/climate_index_row" android:layout_width="match_parent"
                  android:layout_height="match_parent"
        >
            <TextView android:id="@+id/climate_text"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="8dp"
                      android:layout_marginTop="10dp"
                      android:text="@string/climate_text"
                      android:textAlignment="viewStart"
                      android:textSize="16sp"/>


            <TextView android:id="@+id/climate_value"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="12dp"

                      android:layout_marginStart="12dp"
                      android:layout_marginTop="10dp"
                      android:textAlignment="center"
                      android:textSize="16sp"
                      tools:text="120.00"/>

        </TableRow>

        <View
            android:id="@+id/detail_divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="#dadada"
            app:layout_constraintStart_toStartOf="parent"/>

    </TableLayout>


</android.support.constraint.ConstraintLayout>